tests/expressions/type_error/is.shelltest
// generated by `etc/generate_operator_test.py type_error is`

is_type_error.burn:
	import burn
	try { nothing is nothing } catch TypeError $e { print "TypeError" }
	try { true is nothing } catch TypeError $e { print "TypeError" }
	try { 1 is nothing } catch TypeError $e { print "TypeError" }
	try { 1.0 is nothing } catch TypeError $e { print "TypeError" }
	try { "foo" is nothing } catch TypeError $e { print "TypeError" }
	try { function(){} is nothing } catch TypeError $e { print "TypeError" }
	try { Something is nothing } catch TypeError $e { print "TypeError" }
	try { burn is nothing } catch TypeError $e { print "TypeError" }

$ burn --tolerant is_type_error.burn
	* stdout
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
		TypeError
